--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  #state management
+  flutter_bloc: ^8.1.3
+
   #network
   vexana: ^3.5.4
 
@@ -40,6 +43,8 @@ flutter:
   assets:
     - assets/animations/
     - assets/icons/
+    - assets/images/
+    - assets/translations/
 
 
   uses-material-design: true
